--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+#ASSETS PACK
+Content/Stylized_Meadow_v20
+Content/StarterContent
